--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
   "name": "@psu/logseq-style-tweaks",
-  "version": "1.1.0",
+  "version": "v1.2.1",
   "author": "psu",
-  "main": "index.js",
   "description": "A smorgasbord of small and large style tweaks to the Logseq content and UI.",
+  "repo": "psu/logseq-style-tweaks",
   "license": "MIT",
+  "main": "index.js",
+  "scripts": {},
+  "dependencies": {
+    "@logseq/libs": "^0.0.9"
+  },
   "logseq": {
     "id": "logseq-style-tweaks",
     "title": "Style Tweaks"
   },
-  "scripts": {
-    "test": "exit 0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/psu/logseq-style-tweaks.git"
-  },
-  "keywords": [
-    "logseq",
-    "plugin"
-  ],
-  "bugs": {
-    "url": "https://github.com/psu/logseq-style-tweaks/issues"
-  },
-  "homepage": "https://github.com/psu/logseq-style-tweaks#readme",
-  "publishConfig": {
-    "@psu:registry": "https://npm.pkg.github.com"
-  }
+  "effect": false
 }
